<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_poster"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="18dp"
            android:src="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="start"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_poster"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            app:layout_constraintEnd_toStartOf="@id/text_score"
            app:layout_constraintStart_toStartOf="@+id/text_release"
            app:layout_constraintTop_toBottomOf="@+id/text_release"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/text_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_star"
            android:padding="30dp"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_poster"
            app:layout_constraintBottom_toBottomOf="@id/text_genre"
            tools:text="@string/score" />

        <TextView
            android:id="@+id/text_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            tools:text="@string/genre" />

        <Button
            android:id="@+id/btn_watch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button"
            android:text="@string/watch"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_genre" />

        <TextView
            android:id="@+id/text_overviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/overview"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_watch"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>