<resources>
    <string name="app_name">My Movies Catalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Dirilis pada %s</string>
    <string name="genre">Genre: %s</string>
    <string name="score">00</string>
    <string name="overview">Ringkasan singkat</string>
    <string name="title">Judul Film</string>
    <string name="main">Movies</string>
    <string name="tv_shows">Tv Show</string>
    <string name="share_text">Segera tonton %s </string>
    <string name="title_activity_detail_movies">DetailMoviesActivity</string>
    <string name="previous">Previous</string>
    <string name="watch">Tonton Sekarang</string>
    <string name="share">Share</string>
    <string name="loading">Memuat...</string>
</resources>